# petalPlan

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: pyproject.toml  requirements.txt
backend/app/: agent.py  crud.py  database.py  insights.py  main.py  models.py  schemas.py
backend/tests/: conftest.py  test_endpoints.py  test_stats.py
docs/: api.md  architecture.md  database.md
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
